--- a/index.html
+++ b/index.html
@@ -1,1 +1,225 @@
-hola
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jdomez | Portafolio</title>
+    <meta name="title" content="Jdomez | Portafolio" />
+    <meta name="description" content="Soluciones de diseño únicas y personalizadas que ayudan a las marcas a destacarse. Con experiencia en branding, diseño web, desarrollo e-commerce y marketing digital, transformo ideas en experiencias visuales impactantes." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jdomez.com/" />
+    <meta property="og:title" content="Jdomez | Portafolio" />
+    <meta property="og:description" content="Soluciones de diseño únicas y personalizadas que ayudan a las marcas a destacarse. Con experiencia en branding, diseño web, desarrollo e-commerce y marketing digital, transformo ideas en experiencias visuales impactantes." />
+    <meta property="og:image" content="https://jdomez.com/src/images/jd-front.jpg" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jdomez.com/" />
+    <meta property="twitter:title" content="Jdomez | Portafolio" />
+    <meta property="twitter:description" content="Soluciones de diseño únicas y personalizadas que ayudan a las marcas a destacarse. Con experiencia en branding, diseño web, desarrollo e-commerce y marketing digital, transformo ideas en experiencias visuales impactantes." />
+    <meta property="twitter:image" content="https://jdomez.com/src/images/jd-front.jpg" />
+
+    <link rel="icon" type="image/x-icon" href="src/images/favicon.png">
+    <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="src/css/menu.css">
+    <link rel="stylesheet" href="src/css/footer.css">
+    <link rel="stylesheet" href="src/css/queries.css">
+
+</head>
+<body>
+  <div class="cursor">
+    <span>
+      <svg viewBox="0 0 1080 1080" class="cursor-arrow" xmlns="http://www.w3.org/2000/svg">
+        <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
+      </svg>
+    </span>
+  </div>
+  <header class="header">
+    <a href="index.html" class="header__logo e" aria-label="Logo de Jdomez">
+      <img src="src/images/logo-jdomez.svg" alt="Jdomez logo">
+    </a>
+    <nav class="header__nav__toggle">
+      <ul class="header__menu__toggle" id="menuToggle">
+          <li><a href="index.html" class="e">INICIO</a></li>
+          <li><a href="proyectos/branding" class="e">BRANDING</a></li>
+          <li><a href="proyectos/diseño" class="e">DISEÑO</a></li>
+          <li><a href="proyectos" class="e">PROYECTOS WEB</a></li>
+          <li><a href="proyectos/video" class="e">VIDEO</a></li>
+      </ul>
+      <div class="header__nav__toggle__button" id="toggleButton">
+        <button>Menu</button>
+        <button>Menu</button>
+      </div>
+    </nav>
+  </header>
+    <section>
+      <div class="presentation">
+        <div class="presentation__content">
+          <span class="presentation__subtitle">Desde el 2017</span>
+          <h1 class="presentation__title-content" id="title">
+            <span class="symbol-title">*</span>
+            <span class="presentation__title">
+              <span class="presentation__title-name">Juan David</span>
+              <span class="presentation__title-last-name">Gomez Betancur</span>
+            </span>
+            <span class="symbol-title">*</span>
+          </h1>
+          <p class="presentation__text">
+            <span class="presentation__text--yellow">Con más de 7 años de experiencia,</span>
+            <span>me especializo en diseñar soluciones creativas en diseño gráfico,
+              creación de marca, diseño de páginas web front-end, y animación y edición de video.</span>
+          </p>
+        </div>
+
+        <div class="presentation-bottom">
+          <div class="presentation__scroll">
+            <div class="presentation__mouse">
+              <div class="presentation__mouse-wheel"></div>
+            </div>
+            <p>Scroll</p>
+          </div>
+
+          <div class="social-links-container">
+            <a href="https://www.linkedin.com/in/juan-david-gomez-531b841b7/" class="social-link" target="_blank">linkedin
+              <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
+                <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
+              </svg>
+            </a>
+            <a href="https://wa.me/+573019321135" class="social-link" target="_blank">whatsapp
+              <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
+                <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="select-projects">
+      <h2 class="select-projects__title">
+        <span class="fade-in-view-left">
+          Proyectos
+        </span>
+        <span class="fade-in-view-right">
+          selecciona<span>2</span>
+        </span>
+      </h2>
+
+      <div class="project">
+        <div class="select-projects__project-name">
+          <span class="projects__project-year">2024</span>
+          <div class="select-projects__project">
+            <h2>Castillitos</h2>
+            <span class="skills">E-commerce</span>
+            <span class="skills">Shopify</span>
+          </div>
+          <a href="proyectos/castillitos" class="btn-project e">Ver proyecto
+            <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
+              <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
+          </svg>
+          </a>
+        </div>
+        <div class="select-projects__project-img">
+          <div class="projects-images__browser">
+            <div class="projects-images__browser-dots"></div>
+            <div class="projects-images__browser-url"></div>
+            <div class="projects-images__browser-share"></div>
+          </div>
+          <a href="proyectos/castillitos" class="e">
+            <picture>
+              <source srcset="src/images/castillitos-portada.webp" type="image/webp">
+              <source srcset="src/images/castillitos-portada.jpg" type="image/jpeg">
+              <img src="src/images/castillitos-portada.jpg" alt="castillitos portada" style="width: 100%; height: auto;">
+            </picture>
+          </a>
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="select-projects__project-name">
+          <span class="projects__project-year">2024</span>
+          <div class="select-projects__project">
+            <h2>Jeans Y Moda</h2>
+            <span class="skills">E-commerce</span>
+            <span class="skills">Shopify</span>
+          </div>
+          <a href="proyectos/jeansymoda" class="btn-project e">Ver proyecto
+            <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
+              <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
+          </svg>
+          </a>
+        </div>
+        <div class="select-projects__project-img">
+          <div class="projects-images__browser">
+            <div class="projects-images__browser-dots"></div>
+            <div class="projects-images__browser-url"></div>
+            <div class="projects-images__browser-share"></div>
+          </div>
+          <a href="proyectos/jeansymoda" class="e">
+            <picture>
+              <source srcset="src/images/jeansymoda-portada.webp" type="image/webp">
+              <source srcset="src/images/jeansymoda-portada.jpg" type="image/jpeg">
+              <img src="src/images/jeansymoda-portada.jpg" alt="jeans y moda portada" style="width: 100%; height: auto;">
+            </picture>
+          </a>
+        </div>
+      </div>
+    </section>
+    
+    <div class="box-transition-home">
+      <div class="box box--top"></div>
+      <div class="logo-loading">
+        <img class="logo-loading--animated" src="src/images/logo-jdomez-black.svg" alt="Logo Jdomez">
+      </div>
+      <div class="box box--bottom"></div>
+    </div>
+
+  <video src="src/images/noise-dust-overlay.mp4" muted loop autoplay class="noise"></video>
+  <footer id="footer" class="footer">
+    <div class="footer__jdomez-info-container">
+      <div class="footer__human-eye">
+        <img src="src/images/jdomez-human-eye.svg" alt="jdomez human eye">
+      </div>
+      <div class="footer__jdomez-info">
+        <h2 class="footer__jdomez-info-title">Juan David Gomez</h2>
+        <div class="footer__jdomez-info-content">
+          <div class="footer__jdomez-info-text">
+            <p>
+              Con más de <span>7 años de experiencia,</span> me especializo en diseñar soluciones creativas en diseño gráfico,
+              creación de marca, diseño de páginas web front-end, y animación y edición de video.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-social-container">
+      <div class="footer-social__mail">
+        <div class="text-reveal">
+          <div class="text-wrapper">
+            <a href="mailto:contact@jdomez.com" class="text-top">Contáctame</a>
+            <a href="mailto:contact@jdomez.com" class="text-bottom">Contáctame</a>
+          </div>
+        </div>
+      </div>
+      <div class="social-links-container">
+        <a href="https://www.linkedin.com/in/juan-david-gomez-531b841b7/" class="social-link" target="_blank">linkedin
+          <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
+            <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
+        </svg>
+        </a>
+        <a href="https://wa.me/+573019321135" class="social-link" target="_blank">whatsapp
+          <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
+            <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
+          </svg>
+        </a>
+      </div>
+    </div>
+  </footer>
+  <script src="src/js/Lenis.min.js"></script>
+  <script src="src/js/Gsap.min.js"></script>
+  <script src="src/js/ScrollTrigger.min.js"></script>
+  <script src="src/js/script.js"></script>
+</body>
+</html>
