--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <meta property="twitter:image" content="https://jdomez.com/src/images/jd-front.jpg" />
 
     <link rel="icon" type="image/x-icon" href="src/images/favicon.png">
-    <link rel="stylesheet" href="src/css/global.css">
-    <link rel="stylesheet" href="src/css/styles.css">
-    <link rel="stylesheet" href="src/css/menu.css">
-    <link rel="stylesheet" href="src/css/footer.css">
-    <link rel="stylesheet" href="src/css/queries.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/queries.css">
 
 </head>
 <body>
@@ -217,9 +217,10 @@
       </div>
     </div>
   </footer>
-  <script src="src/js/Lenis.min.js"></script>
-  <script src="src/js/Gsap.min.js"></script>
-  <script src="src/js/ScrollTrigger.min.js"></script>
-  <script src="src/js/script.js"></script>
+  <script src="js/Lenis.min.js"></script>
+  <script src="js/Gsap.min.js"></script>
+  <script src="js/ScrollTrigger.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
