--- a/proyectos/diseño.html
+++ b/proyectos/diseño.html
@@ -21,16 +21,16 @@
     </div>
     
     <header class="header">
-        <a href="/" class="header__logo e" aria-label="Logo de Jdomez">
-            <img src="/src/images/logo-jdomez.svg" alt="Jdomez logo">
+        <a href="../index.html" class="header__logo e" aria-label="Logo de Jdomez">
+            <img src="../src/images/logo-jdomez.svg" alt="Jdomez logo">
         </a>
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
                 <li><a href="/" class="e">INICIO</a></li>
-                <li><a href="/proyectos/branding" class="e">BRANDING</a></li>
-                <li><a href="/proyectos/diseño" class="e">DISEÑO</a></li>
-                <li><a href="/proyectos" class="e">PROYECTOS WEB</a></li>
-                <li><a href="/proyectos/video" class="e">VIDEO</a></li>
+                <li><a href="/proyectos/branding.html" class="e">BRANDING</a></li>
+                <li><a href="/proyectos/diseño.html" class="e">DISEÑO</a></li>
+                <li><a href="/proyectos.html" class="e">PROYECTOS WEB</a></li>
+                <li><a href="/proyectos/video.html" class="e">VIDEO</a></li>
             </ul>
             <div class="header__nav__toggle__button" id="toggleButton">
                 <button>Menu</button>
@@ -60,29 +60,29 @@
         <h2 class="w-50">Post para redes sociales</h2>
         <span class="subtitle-design">Historias para redes sociales</span>
         <div class="images-gallery images-gallery__stories">
-            <img src="/src/images/historia-5.jpg" alt="historia 5">
-            <img src="/src/images/historia-3.png" alt="historia 3">
-            <img src="/src/images/historia-4.jpg" alt="historia 4">
-            <img src="/src/images/historia-1.jpg" alt="historia 1">
+            <img src="../src/images/historia-5.jpg" alt="historia 5">
+            <img src="../src/images/historia-3.png" alt="historia 3">
+            <img src="../src/images/historia-4.jpg" alt="historia 4">
+            <img src="../src/images/historia-1.jpg" alt="historia 1">
         </div>
         <span class="subtitle-design">Post para redes sociales</span>
         <div class="images-gallery images-gallery__post">
-            <img src="/src/images/post-3.jpg" alt="post 1">
-            <img src="/src/images/post-4.jpg" alt="post 2">
-            <img src="/src/images/post-6.jpg" alt="post 4">
-            <img src="/src/images/post-5.jpg" alt="post 3">
+            <img src="../src/images/post-3.jpg" alt="post 1">
+            <img src="../src/images/post-4.jpg" alt="post 2">
+            <img src="../src/images/post-6.jpg" alt="post 4">
+            <img src="../src/images/post-5.jpg" alt="post 3">
         </div>
         <h2 class="w-50">Diseño de catálogos</h2>
         <div class="images-gallery images-gallery__post">
-            <img src="/src/images/Cover-and-open-magazine-mockup-1-1.jpeg" alt="catalogo 1">
-            <img src="/src/images/Cover-and-open-magazine-2-mockup-1-1.jpeg" alt="catalogo 1">
+            <img src="../src/images/Cover-and-open-magazine-mockup-1-1.jpeg" alt="catalogo 1">
+            <img src="../src/images/Cover-and-open-magazine-2-mockup-1-1.jpeg" alt="catalogo 1">
         </div>
         <div class="images-gallery images-gallery__spomi">
-            <img src="/src/images/Cover-and-open-magazine-spomi-mockup.jpeg" alt="catalogo spomi">
+            <img src="../src/images/Cover-and-open-magazine-spomi-mockup.jpeg" alt="catalogo spomi">
         </div>
         <div class="images-gallery images-gallery__post">
-            <img src="/src/images/Cover-and-open-magazine-spomi-mockup-1-1.jpeg" alt="catalogo spomi 2">
-            <img src="/src/images/flayer-mockup-1-1.jpeg" alt="flayer">
+            <img src="../src/images/Cover-and-open-magazine-spomi-mockup-1-1.jpeg" alt="catalogo spomi 2">
+            <img src="../src/images/flayer-mockup-1-1.jpeg" alt="flayer">
         </div>
 
     </section>
