--- a/proyectos/elgalaxyeventcenter.html
+++ b/proyectos/elgalaxyeventcenter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jdomez | El Galaxy Event Center</title>
-    <link rel="icon" type="image/x-icon" href="/src/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../src/images/favicon.png">
     <link rel="stylesheet" href="../src/css/global.css">
     <link rel="stylesheet" href="../src/css/styles.css">
     <link rel="stylesheet" href="../src/css/menu.css">
@@ -21,7 +21,7 @@
     </div>
     <div class="pagination">
         <div>
-            <a href="/proyectos/jeansymoda" class="e">
+            <a href="../proyectos/jeansymoda.html" class="e">
                 <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
                     <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
                 </svg>
@@ -38,8 +38,8 @@
     </div>
     
     <header class="header">
-        <a href="/" class="header__logo e" aria-label="Logo de Jdomez">
-            <img src="/src/images/logo-jdomez.svg" alt="Jdomez logo">
+        <a href="../index.html" class="header__logo e" aria-label="Logo de Jdomez">
+            <img src="../src/images/logo-jdomez.svg" alt="Jdomez logo">
         </a>
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
@@ -84,13 +84,13 @@
                 <div class="projects-images__browser-share"></div>
             </div>
             <picture>
-                <source srcset="/src/images/elgalaxyevent.com-home-full-screen.webp" type="image/webp">
-                <source srcset="/src/images/elgalaxyevent.com-home-full-screen.jpg" type="image/jpeg">
-                <img src="/src/images/elgalaxyevent.com-home-full-screen.jpg" alt="El Galaxy web escritorio" style="width: 100%; height: auto;">
+                <source srcset="../src/images/elgalaxyevent.com-home-full-screen.webp" type="image/webp">
+                <source srcset="../src/images/elgalaxyevent.com-home-full-screen.jpg" type="image/jpeg">
+                <img src="../src/images/elgalaxyevent.com-home-full-screen.jpg" alt="El Galaxy web escritorio" style="width: 100%; height: auto;">
             </picture>
         </div>
         <div class="projects-images__mockup">
-            <img src="/src/images/mockup-el-galaxy.jpg" alt="El Galaxy responsive" class="mockup__img">
+            <img src="../src/images/mockup-el-galaxy.jpg" alt="El Galaxy responsive" class="mockup__img">
         </div>
         <div class="projects-images">
             <div class="projects-images__browser">
@@ -99,9 +99,9 @@
                 <div class="projects-images__browser-share"></div>
             </div>
             <picture>
-                <source srcset="/src/images/elgalaxyevent.com-home-full-screen-mobile.webp" type="image/webp">
-                <source srcset="/src/images/elgalaxyevent.com-home-full-screen-mobile.jpg" type="image/jpeg">
-                <img src="/src/images/elgalaxyevent.com-home-full-screen-mobile.jpg" alt="El Galaxy web móvil" style="width: 100%; height: auto;">
+                <source srcset="../src/images/elgalaxyevent.com-home-full-screen-mobile.webp" type="image/webp">
+                <source srcset="../src/images/elgalaxyevent.com-home-full-screen-mobile.jpg" type="image/jpeg">
+                <img src="../src/images/elgalaxyevent.com-home-full-screen-mobile.jpg" alt="El Galaxy web móvil" style="width: 100%; height: auto;">
             </picture>
         </div>
         <div class="projects-images">
@@ -113,7 +113,7 @@
             <picture>
                 <source srcset="/src/images/elgalaxyevent.com-product-full-screen.webp" type="image/webp">
                 <source srcset="/src/images/elgalaxyevent.com-product-full-screen.jpg" type="image/jpeg">
-                <img src="/src/images/elgalaxyevent.com-product-full-screen.jpg" alt="El Galaxy web producto escritorio" style="width: 100%; height: auto;">
+                <img src="../src/images/elgalaxyevent.com-product-full-screen.jpg" alt="El Galaxy web producto escritorio" style="width: 100%; height: auto;">
             </picture>
         </div>
         <div class="projects-images">
@@ -125,7 +125,7 @@
             <picture>
                 <source srcset="/src/images/elgalaxyevent.com-product-full-screen-mobile.webp" type="image/webp">
                 <source srcset="/src/images/elgalaxyevent.com-product-full-screen-mobile.jpg" type="image/jpeg">
-                <img src="/src/images/elgalaxyevent.com-product-full-screen-mobile.jpg" alt="El Galaxy web producto móvil" style="width: 100%; height: auto;">
+                <img src="../src/images/elgalaxyevent.com-product-full-screen-mobile.jpg" alt="El Galaxy web producto móvil" style="width: 100%; height: auto;">
             </picture>
         </div>
     </section>
@@ -133,7 +133,7 @@
     <div class="box-transition-home">
         <div class="box box--top"></div>
         <div class="logo-loading">
-            <img class="logo-loading--animated" src="/src/images/logo-jdomez-black.svg" alt="Logo Jdomez">
+            <img class="logo-loading--animated" src="../src/images/logo-jdomez-black.svg" alt="Logo Jdomez">
         </div>
         <div class="box box--bottom"></div>
     </div>
@@ -141,7 +141,7 @@
     <footer id="footer" class="footer">
         <div class="footer__jdomez-info-container">
             <div class="footer__human-eye">
-                <img src="/src/images/jdomez-human-eye.svg" alt="jdomez human eye">
+                <img src="../src/images/jdomez-human-eye.svg" alt="jdomez human eye">
             </div>
             <div class="footer__jdomez-info">
                 <h2 class="footer__jdomez-info-title">Juan David Gomez</h2>
