--- a/proyectos/jeansymoda.html
+++ b/proyectos/jeansymoda.html
@@ -21,7 +21,7 @@
     </div>
     <div class="pagination">
         <div>
-            <a href="/proyectos/castillitos" class="e">
+            <a href="../proyectos/castillitos.html" class="e">
                 <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
                     <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
                 </svg>
@@ -31,7 +31,7 @@
             <span>2/3</span>
         </div>
         <div>
-            <a href="/proyectos/elgalaxyeventcenter" class="e">
+            <a href="../proyectos/elgalaxyeventcenter.html" class="e">
                 <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
                     <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
                 </svg>
@@ -40,16 +40,16 @@
     </div>
     
     <header class="header">
-        <a href="/" class="header__logo e" aria-label="Logo de Jdomez">
-            <img src="/src/images/logo-jdomez.svg" alt="Jdomez logo">
+        <a href="../index.html" class="header__logo e" aria-label="Logo de Jdomez">
+            <img src="../src/images/logo-jdomez.svg" alt="Jdomez logo">
         </a>
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
-                <li><a href="/" class="e">INICIO</a></li>
-                <li><a href="/proyectos/branding" class="e">BRANDING</a></li>
-                <li><a href="/proyectos/diseño" class="e">DISEÑO</a></li>
-                <li><a href="/proyectos" class="e">PROYECTOS WEB</a></li>
-                <li><a href="/proyectos/video" class="e">VIDEO</a></li>
+                <li><a href="../index.html" class="e">INICIO</a></li>
+                <li><a href="../proyectos/branding.html" class="e">BRANDING</a></li>
+                <li><a href="../proyectos/diseño.html" class="e">DISEÑO</a></li>
+                <li><a href="../proyectos.html" class="e">PROYECTOS WEB</a></li>
+                <li><a href="../proyectos/video.html" class="e">VIDEO</a></li>
             </ul>
             <div class="header__nav__toggle__button" id="toggleButton">
                 <button>Menu</button>
@@ -86,13 +86,13 @@
                 <div class="projects-images__browser-share"></div>
             </div>
             <picture>
-                <source srcset="/src/images/jeansymoda.com-home-full-screen.webp" type="image/webp">
-                <source srcset="/src/images/jeansymoda.com-home-full-screen.jpg" type="image/jpeg">
-                <img src="/src/images/jeansymoda.com-home-full-screen.jpg" alt="Jeans y Moda web escritorio" style="width: 100%; height: auto;">
+                <source srcset="../src/images/jeansymoda.com-home-full-screen.webp" type="image/webp">
+                <source srcset="../src/images/jeansymoda.com-home-full-screen.jpg" type="image/jpeg">
+                <img src="../src/images/jeansymoda.com-home-full-screen.jpg" alt="Jeans y Moda web escritorio" style="width: 100%; height: auto;">
             </picture>
         </div>
         <div class="projects-images__mockup">
-            <img src="/src/images/mockup-jeansymoda.jpg" alt="Jeans y Moda responsive" class="mockup__img">
+            <img src="../src/images/mockup-jeansymoda.jpg" alt="Jeans y Moda responsive" class="mockup__img">
         </div>
         <div class="projects-images">
             <div class="projects-images__browser">
@@ -101,9 +101,9 @@
                 <div class="projects-images__browser-share"></div>
             </div>
             <picture>
-                <source srcset="/src/images/jeansymoda.com-home-full-screen-mobile.webp" type="image/webp">
-                <source srcset="/src/images/jeansymoda.com-home-full-screen-mobile.jpg" type="image/jpeg">
-                <img src="/src/images/jeansymoda.com-home-full-screen-mobile.jpg" alt="Jeans y Moda web móvil" style="width: 100%; height: auto;">
+                <source srcset="../src/images/jeansymoda.com-home-full-screen-mobile.webp" type="image/webp">
+                <source srcset="../src/images/jeansymoda.com-home-full-screen-mobile.jpg" type="image/jpeg">
+                <img src="../src/images/jeansymoda.com-home-full-screen-mobile.jpg" alt="Jeans y Moda web móvil" style="width: 100%; height: auto;">
             </picture>
         </div>
         <div class="projects-images">
@@ -113,9 +113,9 @@
             <div class="projects-images__browser-share"></div>
             </div>
             <picture>
-                <source srcset="/src/images/jeansymoda.com-product-full-screen.webp" type="image/webp">
-                <source srcset="/src/images/jeansymoda.com-product-full-screen.jpg" type="image/jpeg">
-                <img src="/src/images/jeansymoda.com-product-full-screen.jpg" alt="Jeans y Moda web producto escritorio" style="width: 100%; height: auto;">
+                <source srcset="../src/images/jeansymoda.com-product-full-screen.webp" type="image/webp">
+                <source srcset="../src/images/jeansymoda.com-product-full-screen.jpg" type="image/jpeg">
+                <img src="../src/images/jeansymoda.com-product-full-screen.jpg" alt="Jeans y Moda web producto escritorio" style="width: 100%; height: auto;">
             </picture>
         </div>
         <div class="projects-images">
@@ -125,9 +125,9 @@
             <div class="projects-images__browser-share"></div>
             </div>
             <picture>
-                <source srcset="/src/images/jeansymoda.com-product-full-screen-mobile.webp" type="image/webp">
-                <source srcset="/src/images/jeansymoda.com-product-full-screen-mobile.jpg" type="image/jpeg">
-                <img src="/src/images/jeansymoda.com-product-full-screen-mobile.jpg" alt="Jeans y Moda web producto móvil" style="width: 100%; height: auto;">
+                <source srcset="../src/images/jeansymoda.com-product-full-screen-mobile.webp" type="image/webp">
+                <source srcset="../src/images/jeansymoda.com-product-full-screen-mobile.jpg" type="image/jpeg">
+                <img src="../src/images/jeansymoda.com-product-full-screen-mobile.jpg" alt="Jeans y Moda web producto móvil" style="width: 100%; height: auto;">
             </picture>
         </div>
     </section>
