--- a/proyectos/video.html
+++ b/proyectos/video.html
@@ -21,16 +21,16 @@
     </div>
     
     <header class="header">
-        <a href="/" class="header__logo e" aria-label="Logo de Jdomez">
+        <a href="../index.html" class="header__logo e" aria-label="Logo de Jdomez">
             <img src="/src/images/logo-jdomez.svg" alt="Jdomez logo">
         </a>
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
-                <li><a href="/" class="e">INICIO</a></li>
-                <li><a href="/proyectos/branding" class="e">BRANDING</a></li>
-                <li><a href="/proyectos/diseño" class="e">DISEÑO</a></li>
-                <li><a href="/proyectos" class="e">PROYECTOS WEB</a></li>
-                <li><a href="/proyectos/video" class="e">VIDEO</a></li>
+                <li><a href="../index.html" class="e">INICIO</a></li>
+                <li><a href="../proyectos/branding.html" class="e">BRANDING</a></li>
+                <li><a href="../proyectos/diseño.html" class="e">DISEÑO</a></li>
+                <li><a href="../proyectos.html" class="e">PROYECTOS WEB</a></li>
+                <li><a href="../proyectos/video.html" class="e">VIDEO</a></li>
             </ul>
             <div class="header__nav__toggle__button" id="toggleButton">
                 <button>Menu</button>
@@ -59,28 +59,28 @@
 
         <div class="video-gallery">
             <div class="video video-9-16">
-                <video class="videoControles" src="/src/videos/reel-1.mp4" controls></video>
+                <video class="videoControles" src="../src/videos/reel-1.mp4" controls></video>
             </div>
             <div class="video video-9-16">
-                <video class="videoControles" src="/src/videos/reel-2.mp4" controls></video>
+                <video class="videoControles" src="../src/videos/reel-2.mp4" controls></video>
             </div>
             <div class="video video-1-1">
-                <video class="videoControles" src="/src/videos/motion-graphic-1.m4v" controls></video>
+                <video class="videoControles" src="../src/videos/motion-graphic-1.m4v" controls></video>
             </div>
             <div class="video video-9-16">
-                <video class="videoControles" src="/src/videos/reel-3.mp4" ></video>
+                <video class="videoControles" src="../src/videos/reel-3.mp4" ></video>
             </div>
             <div class="video video-9-16">
-                <video class="videoControles" src="/src/videos/reel-4.mp4" controls></video>
+                <video class="videoControles" src="../src/videos/reel-4.mp4" controls></video>
             </div>
             <div class="video video-1-1">
-                <video class="videoControles" src="/src/videos/post-2.mp4" controls></video>
+                <video class="videoControles" src="../src/videos/post-2.mp4" controls></video>
             </div>
             <div class="video video-9-16">
-                <video class="videoControles" src="/src/videos/reel-5.mp4" controls></video>
+                <video class="videoControles" src="../src/videos/reel-5.mp4" controls></video>
             </div>
             <div class="video video-9-16">
-                <video class="videoControles" src="/src/videos/reel-6.mp4" controls></video>
+                <video class="videoControles" src="../src/videos/reel-6.mp4" controls></video>
             </div>
         </div>
 
