--- a/proyectos/castillitos.html
+++ b/proyectos/castillitos.html
@@ -29,7 +29,7 @@
             <span>1/3</span>
         </div>
         <div>
-            <a href="../proyectos/jeansymoda" class="e">
+            <a href="../proyectos/jeansymoda.html" class="e">
                 <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
                     <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
                 </svg>
@@ -44,10 +44,10 @@
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
                 <li><a href="../index.html" class="e">INICIO</a></li>
-                <li><a href="../proyectos/branding" class="e">BRANDING</a></li>
-                <li><a href="../proyectos/diseño" class="e">DISEÑO</a></li>
-                <li><a href="../proyectos" class="e">PROYECTOS WEB</a></li>
-                <li><a href="../proyectos/video" class="e">VIDEO</a></li>
+                <li><a href="../proyectos/branding.html" class="e">BRANDING</a></li>
+                <li><a href="../proyectos/diseño.html" class="e">DISEÑO</a></li>
+                <li><a href="../proyectos.html" class="e">PROYECTOS WEB</a></li>
+                <li><a href="../proyectos/video.html" class="e">VIDEO</a></li>
             </ul>
             <div class="header__nav__toggle__button" id="toggleButton">
                 <button>Menu</button>
