--- a/proyectos.html
+++ b/proyectos.html
@@ -26,10 +26,10 @@
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
                 <li><a href="index.html" class="e">INICIO</a></li>
-                <li><a href="proyectos/branding" class="e">BRANDING</a></li>
-                <li><a href="proyectos/diseño" class="e">DISEÑO</a></li>
-                <li><a href="proyectos" class="e">PROYECTOS WEB</a></li>
-                <li><a href="proyectos/video" class="e">VIDEO</a></li>
+                <li><a href="proyectos/branding.html" class="e">BRANDING</a></li>
+                <li><a href="proyectos/diseño.html" class="e">DISEÑO</a></li>
+                <li><a href="proyectos.html" class="e">PROYECTOS WEB</a></li>
+                <li><a href="proyectos/video.html" class="e">VIDEO</a></li>
             </ul>
             <div class="header__nav__toggle__button" id="toggleButton">
                 <button>Menu</button>
@@ -67,7 +67,7 @@
                     <div class="projects-images__browser-url"></div>
                     <div class="projects-images__browser-share"></div>
                 </div>
-                <a href="proyectos/cialpha" class="e">
+                <a href="proyectos/cialpha.html" class="e">
                     <picture>
                         <source srcset="src/images/cialpha-portada.webp" type="image/webp">
                         <source srcset="src/images/cialpha-portada.jpg" type="image/jpeg">
@@ -85,7 +85,7 @@
                     <span class="skills">E-commerce</span>
                     <span class="skills">Shopify</span>
                 </div>
-                <a href="proyectos/castillitos" class="btn-project e">Ver proyecto
+                <a href="proyectos/castillitos.html" class="btn-project e">Ver proyecto
                     <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
                         <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
                     </svg>
@@ -97,7 +97,7 @@
                     <div class="projects-images__browser-url"></div>
                     <div class="projects-images__browser-share"></div>
                 </div>
-                <a href="proyectos/castillitos" class="e">
+                <a href="proyectos/castillitos.html" class="e">
                     <picture>
                         <source srcset="src/images/castillitos-portada.webp" type="image/webp">
                         <source srcset="src/images/castillitos-portada.jpg" type="image/jpeg">
@@ -115,7 +115,7 @@
                     <span class="skills">E-commerce</span>
                     <span class="skills">Shopify</span>
                 </div>
-                <a href="proyectos/jeansymoda" class="btn-project e">Ver proyecto
+                <a href="proyectos/jeansymoda.html" class="btn-project e">Ver proyecto
                     <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
                     <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
                 </svg>
@@ -127,7 +127,7 @@
                     <div class="projects-images__browser-url"></div>
                     <div class="projects-images__browser-share"></div>
                 </div>
-                <a href="proyectos/jeansymoda" class="e">
+                <a href="proyectos/jeansymoda.html" class="e">
                     <picture>
                         <source srcset="src/images/jeansymoda-portada.webp" type="image/webp">
                         <source srcset="src/images/jeansymoda-portada.jpg" type="image/jpeg">
@@ -145,7 +145,7 @@
                     <span class="skills">E-commerce</span>
                     <span class="skills">Wordpress</span>
                 </div>
-                <a href="proyectos/elgalaxyeventcenter" class="btn-project e">Ver proyecto
+                <a href="proyectos/elgalaxyeventcenter.html" class="btn-project e">Ver proyecto
                     <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
                     <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
                 </svg>
@@ -157,7 +157,7 @@
                     <div class="projects-images__browser-url"></div>
                     <div class="projects-images__browser-share"></div>
                 </div>
-                <a href="proyectos/elgalaxyeventcenter" class="e">
+                <a href="proyectos/elgalaxyeventcenter.html" class="e">
                     <picture>
                         <source srcset="src/images/elgalaxyevent.com-portada.webp" type="image/webp">
                         <source srcset="src/images/elgalaxyevent.com-portada.jpg" type="image/jpeg">
