--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <meta property="twitter:image" content="https://jdomez.com/src/images/jd-front.jpg" />
 
     <link rel="icon" type="image/x-icon" href="src/images/favicon.png">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/queries.css">
+    <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="src/css/menu.css">
+    <link rel="stylesheet" href="src/css/footer.css">
+    <link rel="stylesheet" href="src/css/queries.css">
 
 </head>
 <body>
@@ -42,10 +42,10 @@
     <nav class="header__nav__toggle">
       <ul class="header__menu__toggle" id="menuToggle">
           <li><a href="index.html" class="e">INICIO</a></li>
-          <li><a href="proyectos/branding" class="e">BRANDING</a></li>
-          <li><a href="proyectos/diseño" class="e">DISEÑO</a></li>
-          <li><a href="proyectos" class="e">PROYECTOS WEB</a></li>
-          <li><a href="proyectos/video" class="e">VIDEO</a></li>
+          <li><a href="proyectos/branding.html" class="e">BRANDING</a></li>
+          <li><a href="proyectos/diseño.html class="e">DISEÑO</a></li>
+          <li><a href="proyectos.html" class="e">PROYECTOS WEB</a></li>
+          <li><a href="proyectos/video.html" class="e">VIDEO</a></li>
       </ul>
       <div class="header__nav__toggle__button" id="toggleButton">
         <button>Menu</button>
@@ -217,10 +217,9 @@
       </div>
     </div>
   </footer>
-  <script src="js/Lenis.min.js"></script>
-  <script src="js/Gsap.min.js"></script>
-  <script src="js/ScrollTrigger.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="src/js/Lenis.min.js"></script>
+  <script src="src/js/Gsap.min.js"></script>
+  <script src="src/js/ScrollTrigger.min.js"></script>
+  <script src="src/js/script.js"></script>
 </body>
-
 </html>
