--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <ul class="header__menu__toggle" id="menuToggle">
           <li><a href="index.html" class="e">INICIO</a></li>
           <li><a href="proyectos/branding.html" class="e">BRANDING</a></li>
-          <li><a href="proyectos/diseño.html class="e">DISEÑO</a></li>
+          <li><a href="proyectos/diseño.html" class="e">DISEÑO</a></li>
           <li><a href="proyectos.html" class="e">PROYECTOS WEB</a></li>
           <li><a href="proyectos/video.html" class="e">VIDEO</a></li>
       </ul>
