--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <span class="skills">E-commerce</span>
             <span class="skills">Shopify</span>
           </div>
-          <a href="proyectos/castillitos" class="btn-project e">Ver proyecto
+          <a href="proyectos/castillitos.html" class="btn-project e">Ver proyecto
             <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
               <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
           </svg>
@@ -126,7 +126,7 @@
             <div class="projects-images__browser-url"></div>
             <div class="projects-images__browser-share"></div>
           </div>
-          <a href="proyectos/castillitos" class="e">
+          <a href="proyectos/castillitos.html" class="e">
             <picture>
               <source srcset="src/images/castillitos-portada.webp" type="image/webp">
               <source srcset="src/images/castillitos-portada.jpg" type="image/jpeg">
@@ -144,7 +144,7 @@
             <span class="skills">E-commerce</span>
             <span class="skills">Shopify</span>
           </div>
-          <a href="proyectos/jeansymoda" class="btn-project e">Ver proyecto
+          <a href="proyectos/jeansymoda.html" class="btn-project e">Ver proyecto
             <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
               <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
           </svg>
@@ -156,7 +156,7 @@
             <div class="projects-images__browser-url"></div>
             <div class="projects-images__browser-share"></div>
           </div>
-          <a href="proyectos/jeansymoda" class="e">
+          <a href="proyectos/jeansymoda.html" class="e">
             <picture>
               <source srcset="src/images/jeansymoda-portada.webp" type="image/webp">
               <source srcset="src/images/jeansymoda-portada.jpg" type="image/jpeg">
