--- a/proyectos/elgalaxyeventcenter.html
+++ b/proyectos/elgalaxyeventcenter.html
@@ -179,9 +179,9 @@
             </div>
         </div>
     </footer>
-    <script src="/src/js/Lenis.min.js"></script>
-    <script src="/src/js/Gsap.min.js"></script>
-    <script src="/src/js/ScrollTrigger.min.js"></script>
-    <script src="/src/js/script.js"></script>
+    <script src="../src/js/Lenis.min.js"></script>
+    <script src="../src/js/Gsap.min.js"></script>
+    <script src="../src/js/ScrollTrigger.min.js"></script>
+    <script src="../src/js/script.js"></script>
 </body>
 </html>
