--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a href="proyectos/branding.html" class="e">BRANDING</a></li>
           <li><a href="proyectos/diseño.html" class="e">DISEÑO</a></li>
           <li><a href="proyectos.html" class="e">PROYECTOS WEB</a></li>
-          <li><a href="proyectos/video.html" class="e">VIDEO</a></li>
+          <li><a href="proyectos/videos.html" class="e">VIDEO</a></li>
       </ul>
       <div class="header__nav__toggle__button" id="toggleButton">
         <button>Menu</button>
