--- a/proyectos.html
+++ b/proyectos.html
@@ -55,7 +55,7 @@
                     <span class="skills">One Page</span>
                     <span class="skills">Html5, Css3, Js</span>
                 </div>
-                <a href="proyectos/cialpha" class="btn-project e">Ver proyecto
+                <a href="proyectos/cialpha.html" class="btn-project e">Ver proyecto
                     <svg viewBox="0 0 1080 1080" xmlns="http://www.w3.org/2000/svg">
                     <polygon points="515.8 193.6 451.5 257.9 688.2 494.5 217.7 494.5 217.7 585.5 688.2 585.5 451.5 822.1 515.8 886.4 862.3 540" />
                 </svg>
