--- a/proyectos/cialpha.html
+++ b/proyectos/cialpha.html
@@ -22,15 +22,15 @@
 
     <header class="header">
         <a href="../index.html" class="header__logo e" aria-label="Logo de Jdomez">
-            <img src="/src/images/logo-jdomez.svg" alt="Jdomez logo">
+            <img src="../src/images/logo-jdomez.svg" alt="Jdomez logo">
         </a>
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
-                <li><a href="/" class="e">INICIO</a></li>
+                <li><a href="../index.html" class="e">INICIO</a></li>
                 <li><a href="../proyectos/branding.html" class="e">BRANDING</a></li>
                 <li><a href="../proyectos/diseño.html" class="e">DISEÑO</a></li>
                 <li><a href="../proyectos.html" class="e">PROYECTOS WEB</a></li>
-                <li><a href="/proyectos/video.html" class="e">VIDEO</a></li>
+                <li><a href="../proyectos/video.html" class="e">VIDEO</a></li>
             </ul>
             <div class="header__nav__toggle__button" id="toggleButton">
                 <button>Menu</button>
