--- a/proyectos/elgalaxyeventcenter.html
+++ b/proyectos/elgalaxyeventcenter.html
@@ -43,11 +43,11 @@
         </a>
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
-                <li><a href="/" class="e">INICIO</a></li>
-                <li><a href="/proyectos/branding" class="e">BRANDING</a></li>
-                <li><a href="/proyectos/diseño" class="e">DISEÑO</a></li>
-                <li><a href="/proyectos" class="e">PROYECTOS WEB</a></li>
-                <li><a href="/proyectos/video" class="e">VIDEO</a></li>
+                <li><a href="../index.html" class="e">INICIO</a></li>
+                <li><a href="../proyectos/branding.html" class="e">BRANDING</a></li>
+                <li><a href="../proyectos/diseño.html" class="e">DISEÑO</a></li>
+                <li><a href="../proyectos.html" class="e">PROYECTOS WEB</a></li>
+                <li><a href="../proyectos/video.html" class="e">VIDEO</a></li>
             </ul>
             <div class="header__nav__toggle__button" id="toggleButton">
                 <button>Menu</button>
@@ -111,8 +111,8 @@
             <div class="projects-images__browser-share"></div>
             </div>
             <picture>
-                <source srcset="/src/images/elgalaxyevent.com-product-full-screen.webp" type="image/webp">
-                <source srcset="/src/images/elgalaxyevent.com-product-full-screen.jpg" type="image/jpeg">
+                <source srcset="../src/images/elgalaxyevent.com-product-full-screen.webp" type="image/webp">
+                <source srcset="../src/images/elgalaxyevent.com-product-full-screen.jpg" type="image/jpeg">
                 <img src="../src/images/elgalaxyevent.com-product-full-screen.jpg" alt="El Galaxy web producto escritorio" style="width: 100%; height: auto;">
             </picture>
         </div>
@@ -123,8 +123,8 @@
             <div class="projects-images__browser-share"></div>
             </div>
             <picture>
-                <source srcset="/src/images/elgalaxyevent.com-product-full-screen-mobile.webp" type="image/webp">
-                <source srcset="/src/images/elgalaxyevent.com-product-full-screen-mobile.jpg" type="image/jpeg">
+                <source srcset="../src/images/elgalaxyevent.com-product-full-screen-mobile.webp" type="image/webp">
+                <source srcset="../src/images/elgalaxyevent.com-product-full-screen-mobile.jpg" type="image/jpeg">
                 <img src="../src/images/elgalaxyevent.com-product-full-screen-mobile.jpg" alt="El Galaxy web producto móvil" style="width: 100%; height: auto;">
             </picture>
         </div>
