--- a/proyectos/castillitos.html
+++ b/proyectos/castillitos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jdomez | Castillitos</title>
-    <link rel="icon" type="image/x-icon" href="/src/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../src/images/favicon.png">
     <link rel="stylesheet" href="../src/css/global.css">
     <link rel="stylesheet" href="../src/css/styles.css">
     <link rel="stylesheet" href="../src/css/menu.css">
