--- a/proyectos/diseño.html
+++ b/proyectos/diseño.html
@@ -26,11 +26,11 @@
         </a>
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
-                <li><a href="/" class="e">INICIO</a></li>
-                <li><a href="/proyectos/branding.html" class="e">BRANDING</a></li>
-                <li><a href="/proyectos/diseño.html" class="e">DISEÑO</a></li>
-                <li><a href="/proyectos.html" class="e">PROYECTOS WEB</a></li>
-                <li><a href="/proyectos/video.html" class="e">VIDEO</a></li>
+                <li><a href="../index.html" class="e">INICIO</a></li>
+                <li><a href="../proyectos/branding.html" class="e">BRANDING</a></li>
+                <li><a href="../proyectos/diseño.html" class="e">DISEÑO</a></li>
+                <li><a href="../proyectos.html" class="e">PROYECTOS WEB</a></li>
+                <li><a href="../proyectos/video.html" class="e">VIDEO</a></li>
             </ul>
             <div class="header__nav__toggle__button" id="toggleButton">
                 <button>Menu</button>
