--- a/proyectos/branding.html
+++ b/proyectos/branding.html
@@ -22,7 +22,7 @@
 
     <header class="header">
         <a href="../index.html" class="header__logo e" aria-label="Logo de Jdomez">
-            <img src="src/images/logo-jdomez.svg" alt="Jdomez logo">
+            <img src="../src/images/logo-jdomez.svg" alt="Jdomez logo">
         </a>
         <nav class="header__nav__toggle">
             <ul class="header__menu__toggle" id="menuToggle">
